# MPC-based-Obstacle-Avoidance-Robot

./: CMakeLists.txt
install/: local_setup.sh  setup.sh
install/nav/lib/nav/: smoothing
install/nav/share/nav/: local_setup.dsv  package.sh
install/nav/share/nav/scripts/: mpc_tracker.py  spawn_dynamic_obstacle.py
launch/: mpc_bringup.py  sim_bringup.py
log/: latest_build
scripts/: spawn_static_obstacle.py
src/: smoothing.cpp
